--- a/.eslintignore
+++ b/.eslintignore
@@ -2,7 +2,7 @@
 vite-env.d.ts
 polyfills.ts
 vite.config.ts
-commitlint.config.ts
+commitlint.config.js
 
 # Temporarily ignore, we will slowly remove each directory as we fix files to follow ESLint rules
 /src/components
