--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -7,5 +7,9 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: cognitedata/lint-pr-title-action@v0.2.0
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Install Dependencies
+        run: npm install @commitlint/config-conventional
+      - name: Lint PR name
+        uses: JulienKode/pull-request-name-linter-action@v0.5.0
