--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -8,8 +8,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
-      - name: Install Dependencies
-        run: npm install @commitlint/config-conventional
+        uses: actions/checkout@v3
+
+      - name: Set up pnpm
+        uses: dydxprotocol/setup-pnpm@v1
+
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: pnpm
+
+      - name: Install dependencies
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          pnpm install @commitlint/config-conventional
+
       - name: Lint PR name
         uses: JulienKode/pull-request-name-linter-action@v0.5.0
