--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -24,6 +24,10 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           pnpm install @commitlint/config-conventional
+          echo "module.exports = {extends: ['@commitlint/config-conventional'], rules: { 'subject-case': [0,'always',['sentence-case']],'header-max-length': [2, 'always', 120], 'body-max-line-length': [0, 'always', 120] }};" > commitlint.config.js
 
-      - name: Lint PR name
-        uses: JulienKode/pull-request-name-linter-action@v0.5.0
+      - name: Lint the PR Title
+        run: |
+          echo "${PR_TITLE}" | npx --yes commitlint
+        env:
+          PR_TITLE: '${{ github.event.pull_request.title }}'
